# GameAPI-NetworkProgramming

./: .gitignore  GameAPI.sln  README.md  how 3a6468d73e1f858236e61b78e14bb35aeb130953  vcpkg.json
Cpp/Shooter/: CMakeLists.txt  Shooter.vcxproj.filters
Cpp/Shooter/assets/data_levels/: gameplay_level.json  loby_level.json
Cpp/Shooter/core/engine/input/: command.h
Cpp/Shooter/core/engine/singleton/: InputManager.h  TimeManager.h
Cpp/Shooter/core/engine/state/: GameState.h
Cpp/Shooter/core/engine/state/states/: GameOverState.cpp  GameOverState.h
Cpp/Shooter/core/graphics_pipeline/: ShaderProgram.h  VAO.h  VBO.cpp  VBO.h
Cpp/Shooter/core/graphics_pipeline/shaders/: object.vert
Cpp/Shooter/core/patterns/: observer.h
Cpp/Shooter/game/logic/: GunSystem.cpp  PlayerController.h
Cpp/Shooter/x64/Debug/: glm.cppm.ifc.dt.d.json
Cpp/Shooter/x64/Debug/Shooter.tlog/: link.command.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Csharp/: GameAPI.sln
Csharp/GameAPI/: Program.cs
GameAPI/: API_DOCS.md  GameAPI.csproj  GameAPI.http  Program.cs  appsettings.json  game_scores.db
GameAPI/Controllers/: ScoresController.cs  SessionsController.cs
GameAPI/DTOs/: GameSessionDto.cs  PlayerScoreDto.cs
GameAPI/Data/: AppDbContext.cs
GameAPI/Migrations/: 20251028030340_InitialCreate.Designer.cs  20251028030340_InitialCreate.cs  20251030012718_InitialCreate.Designer.cs  20251030012718_InitialCreate.cs  20251030020304_InitialCreate.Designer.cs  20251030020304_InitialCreate.cs  20251105051148_AddGameStates.Designer.cs  20251105051148_AddGameStates.cs  AppDbContextModelSnapshot.cs
GameAPI/Models/: GameSession.cs  PlayerScore.cs
GameAPI/Properties/: launchSettings.json
Shooter/: Shooter.cpp  Shooter.vcxproj  Shooter.vcxproj.filters  glad.c  imgui.ini
Shooter/Integration/: GameAPIManager.cpp  GameAPIManager.h  Integration.cpp  Integration.h
Shooter/assets/data_levels/: gameover_level.json  gameplay_level.json  leaderboard_level.json  loby_level.json  mainmenu_level.json  pause_level.json
Shooter/assets/prefabs/: awan_prefabs.json  enemy_prefabs.json  manuk_prefabs.json
Shooter/core/: Engine.cpp  Engine.h
Shooter/core/engine/factory/: FactoryComponents.h
Shooter/core/engine/singleton/: GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  RenderManager.cpp  RenderManager.h  TimeManager.cpp  UIManager.cpp  UIManager.h
Shooter/core/engine/state/: GameState.cpp  GameState.h
Shooter/core/engine/state/states/: GameOverState.cpp  GameplayState.cpp  GameplayState.h  LeaderboardState.cpp  LeaderboardState.h  LobyState.cpp  LobyState.h  MainMenuState.cpp  MainMenuState.h  PauseState.cpp  PauseState.h
Shooter/core/graphics_pipeline/: EBO.cpp  EBO.h  ShaderProgram.cpp  Texture.cpp  Texture.h
Shooter/core/graphics_pipeline/shaders/: object.frag
Shooter/core/patterns/: decorator.h  factory.h  singleton.h  state.cpp  state.h
Shooter/game/entity/: Entity.h
Shooter/game/entity/components/: BoundingBox.h  Button.h  Image.h  Personal.h  Sprite.h  TextBlock.h  TextBox.h  Transform.h  UiTransform.h
Shooter/game/entity/systems/: PersonalSystem.cpp  PersonalSystem.h  SpriteSystem.cpp  SpriteSystem.h
Shooter/game/level/: Level.cpp  Level.h
Shooter/game/logic/: GunSystem.cpp  GunSystem.h  PlayerController.cpp  PlayerController.h
Shooter/game/personal/: EnemySystem.cpp  EnemySystem.h
Shooter/game/personal/Enemy/: EnemyManager.cpp  EnemyManager.h
Shooter/game/personal/awan/: AwanInterface.h  AwanManager.cpp  AwanManager.h  AwanSystem.cpp  AwanSystem.h
Shooter/game/personal/enemy/: EnemyInterface.h  EnemyManager.cpp  EnemyManager.h  EnemySystem.cpp  EnemySystem.h
Shooter/game/personal/manuk/: ManukInterface.h  ManukManager.cpp  ManukManager.h  ManukSystem.cpp  ManukSystem.h
Shooter/game/personal/time/: Timer.cpp  Timer.h
Shooter/game/personal/timer/: Timer.cpp  Timer.h
Shooter/game/ray/: RayLine.cpp  RayLine.h
Shooter/libraries/include/glad/: glad.h
Shooter/libraries/lib/: glfw3.lib
Shooter/x64/Debug/: Shooter.exe.recipe  glm.cppm.ifc.d.json  glm.cppm.ifc.dt.module.json  glm.cppm.ifc.dt.module.json.command  glm.cppm.module.json  vc143.idb
Shooter/x64/Debug/Shooter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Shooter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Shooter/x64/Debug/Shooter_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
